--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -5889,6 +5889,9 @@ your-trash-folder-is-taking-up-a-lot-of-space=Your trash folder is taking up a l
 your-type-must-allow-children-pages=Your type must allow children pages.
 zip=Zip
 zip-postal=Zip/Postal
+use-datasource=Use data source
+manually=Manually
+from-datasource=From data source
 
 ##
 ## Country
