Validation of numbers

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -3,7 +3,7 @@ disable-validation=Disable Validation
 enable-validation=Enable Validation
 help-text=Help Text
 hide-advanced-options=Hide Advanced Options
-milti-line=Milti line
+multi-line=Multi line
 my-text-field-type-is=My text field is
 placeholder=Placeholder
 please-type-a-name-for-your-field=Please type a name for your field.
@@ -12,6 +12,14 @@ show-advanced-options=Show Advanced Options
 show-as-a-switcher=Show as a switcher
 single-line=Single line
 type-here-your-question=Type here your question
+error-message-goes-here=Error message goes here
+does-not-contain=Does not contain
+this-number=This number
+is-greater-than-or-equal-to=Is greater than or equal to
+is-greater-than=Is greater than
+is-equal-to=Is equal to
+is-less-than-or-equal-to=Is less than or equal to
+is-less-than=Is less than
 
 ##
 ## Language settings
